Fixes #29 and remove extra space hover the wood forms

--- a/app/assets/stylesheets/controllers/connection.css.scss
+++ b/app/assets/stylesheets/controllers/connection.css.scss
@@ -8,7 +8,7 @@
    ========================================================================== */
 .woodForm{
   background:image-url('section-header.jpg');
-  margin:-19px auto 0 auto;
+  margin:-30px auto 0 auto;
   padding:20px;
   -moz-border-radius:0 0 10px 10px;
   -webkit-border-radius:0 0 10px 10px;
